tests/ext/valid/Subtype_Valid_7.whiley
define sr7nat as int where $ > 0

void System::main([string] args):
    x = {f:1}
    x.f = x.f + 1
    this.out.println(str(x))
    
